# cafer_example_baxter

./: README.md
example_3_db_manager/: CMakeLists.txt  README.md  package.xml
example_3_db_manager/include/data/: joint_states_data.hpp
example_3_db_manager/launch/: db_manager.launch
example_3_db_manager/src/: db_manager_node.cpp
example_3_wave_1/: CMakeLists.txt  README.md  package.xml
example_3_wave_1/include/: globals.h
example_3_wave_1/include/data/: depth_data.hpp  image_data.hpp
example_3_wave_1/launch/: supervisor_wave_1.launch
example_3_wave_1/launch/params/: supervisor_wave_1.yml  wave_1_metadata.yml
example_3_wave_1/src/: wave_1_node.cpp
example_3_wave_2/: CMakeLists.txt  README.md  package.xml
example_3_wave_2/launch/: wave_2.launch
example_3_wave_2/src/: wave_2_node.cpp
